# docflow-scanner-bridge

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  build.ps1  docker-compose.build.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: discovery.rs  folder_watcher.rs  main.rs  pairing.rs  scan_poller.rs  scanner.rs
